# showoff

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  apex.Dockerfile  docker-compose.yml  kafka.Dockerfile  package-lock.json  package.json  tsconfig.json
apex/: apex-outbox.json  apex.Dockerfile  data.json  debezium.json  docker-compose.yml  package.json
apex/prisma/: schema.prisma
apex/src/: constants.ts  middleware.ts  server.ts  test.ts  types.d.ts  userRepository.ts  utils.ts
catalyst/: build.sh  catalyst.Dockerfile  config.go  db.go  docker-compose.yml  go.mod  go.sum  mailer.go  main.go  subscriber.go
nimbus/: build.sh  config.go  go.mod  go.sum  main.go  nimbus.Dockerfile  package-lock.json  package.json  types.go
nimbus/config/: gateway.config.yml
stellar/: build.sh  config.go  go.mod  go.sum  main.go  stellar.Dockerfile  subscriber.go
stellar/handlers/: post_handler.go  project_handler.go
stellar/middlewares/: auth_middleware.go
stellar/repository/: posts_mongo.go  projects_mongo.go  users_mongo.go
stellar/types/: types.go
stellar/utils/: utils.go  utils_test.go
zen/: components.json  next.config.js  package.json
zen/src/: constants.ts  types.d.ts  utils.ts
zen/src/components/: container.tsx  filters.tsx  layout.tsx  navbar.tsx  outside-click-wrapper.tsx  post-form.tsx  posts.tsx  project-banner.tsx  project-card.tsx  project-form.tsx  search-bar.tsx  user-form.tsx
zen/src/hooks/: useAxios.ts
zen/src/pages/: _app.tsx  index.tsx  login.tsx  search.tsx  signup.tsx
zen/src/store/: store.ts
(+8 files in other folders)
